--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,63 @@
 .list{
-    margin: 0 auto;
+    /* margin: 0 auto; */
     width: 1200px;
-    /* height: 700px; */
+    height: 700px;
     outline: 5px solid red;
+    border-radius: 40px 40px 0 0;
     display: flex;
     /* gap: 30px; */
-    column-gap: 30px;
-    row-gap: 100px;
+    /* column-gap: 30px;
+    row-gap: 100px; */
+    flex-wrap: wrap;
+    /* justify-items: center; */
     /* flex-direction: column-reverse; */
     /* justify-content: center;
     align-items: center; */
-    flex-wrap: wrap;
     /* align-content: space-evenly; */
 }
 
 .item{
-    width: 100px;
+    /* width: 100px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100px;
     font-size: 50px;
     color: #fff;
     outline: 3px solid black;
+    flex-grow: 1;
+    /* flex-basis: 240px; */
 }
 
 .item:first-child{
     background-color: salmon;
+    flex-basis: calc(100% /2);
+    border-radius: 40px 0 0 0;
+    order: -2;
 }
 
 .item:nth-child(2){
     background-color: aqua;
+    flex-basis: calc(100% /3);
+    order: 1;
+    /* flex-shrink: 1; */
 }
 
 .item:nth-child(3){
     background-color: fuchsia;
+    flex-basis: calc(100% /3);
+    /* order: -1;
+    align-self: end; */
 }
 .item:nth-child(4){
-background-color: tomato;
+    background-color: tomato;
+    flex-basis: calc(100% /3);
+    order: 2;
 }
 
 .item:nth-child(5){
     background-color: mediumseagreen;
+    flex-basis: calc(100% /2);
+    order: -1;
+    /* flex-grow: 3; */
 }
